--- a/admin-search.html
+++ b/admin-search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search for Customers</title>
+    <title>Search for Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"  href="resource/css/search.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -125,8 +125,8 @@
 </div>
 </nav>
 
-<!-- main content -->
-<main class="content">
+<!-- main content for admin page-->
+<main class="admin-page content">
 <div class="container-fluid">
   <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-3">
   <div class="col">
@@ -136,12 +136,14 @@
         <h5 class="card-text">Ethanol (99%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-          <button class="btn-request">Request</button>
           <button class="btn-view"
           data-type="equipment"
           data-name="Hydrochloric Acid (99%)"
           data-stock="36 ml"
-          data-image="./resource/img/hydrochloric-acid.jpg">View Product</button>
+          data-image="./resource/img/hydrochloric-acid.jpg">Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
+
         </div>
       </div>
     </div>
@@ -153,12 +155,13 @@
         <h5 class="card-text">Formaldehyde (37%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-          <button class="btn-request">Request</button>
           <button class="btn-view" data-type="chemical"
           data-name="Formaldehyde (99%)"
           data-stock="36 ml"
           data-image="./resource/img/formaldehyde.jpg"
-          >View Product</button>
+          >Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
         </div>
       </div>
     </div>
@@ -170,12 +173,13 @@
         <h5 class="card-text">Hydrochloric Acid (99%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
         data-image="./resource/img/hydrochloric-acid.jpg"
-        >View Product</button>
+        >Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
         </div>
       </div>
     </div>
@@ -187,12 +191,13 @@
       <h5 class="card-text">Formaldehyde (37%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="chemical"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
         data-image="./resource/img/formaldehyde.jpg"
-        >View Product</button>
+        >Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
       </div>
     </div>
   </div>
@@ -204,14 +209,15 @@
       <h5 class="card-text">Ethanol (99%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="chemical"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
         data-image="./resource/img/formaldehyde.jpg"
-        >View Product</button>
+        >Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
       </div>
-      </div>
+    </div>
   </div>
 </div>
 <div class="col">
@@ -221,12 +227,13 @@
       <h5 class="card-text">Hydrochloric Acid (37%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
         data-image="./resource/img/formaldehyde.jpg"
-        >View Product</button>
+        >Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
       </div>
     </div>
   </div>
@@ -238,12 +245,13 @@
         <h5 class="card-text">Ethanol (99%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-          <button class="btn-request">Request</button>
           <button class="btn-view" data-type="equipment"
           data-name="Hydrochloric Acid (99%)"
           data-stock="36 ml"
           data-image="./resource/img/formaldehyde.jpg"
-          >View Product</button>
+          >Edit Product
+          <i class="fa-solid fa-pencil"></i>
+        </button>
         </div>
       </div>
   </div>
@@ -255,12 +263,13 @@
       <h5 class="card-text">Hydrochloric Acid (37%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
         data-image="./resource/img/formaldehyde.jpg"
-        >View Product</button>
+        >Edit Product
+        <i class="fa-solid fa-pencil"></i>
+        </button>
       </div>
     </div>
   </div>
@@ -272,12 +281,13 @@
       <h5 class="card-text">Ethanol (99%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
         data-image="./resource/img/formaldehyde.jpg"
-        >View Product</button>
+        >Edit Product
+        <i class="fa-solid fa-pencil"></i>
+        </button>
       </div>
     </div>
   </div>
@@ -289,13 +299,13 @@
     <h5 class="card-text">Ethanol (99%)</h5>
     <h5 class="card-text stock-text">Stock: 36 ml</h5>
     <div class="info">
-      <button class="btn-request">Request</button>
       <button class="btn-view" 
       data-type="chemical"
       data-name="Hydrochloric Acid (99%)"
       data-stock="36 ml"
       data-image="./resource/img/formaldehyde.jpg"
-      >View Product</button>
+      >Edit Product
+        <i class="fa-solid fa-pencil"></i></button>
     </div>
   </div>
 </div>
@@ -307,16 +317,16 @@
     <h5 class="card-text">Ethanol (99%)</h5>
     <h5 class="card-text stock-text">Stock: 36 ml</h5>
     <div class="info">
-      <button class="btn-request">Request</button>
       <button class="btn-view" 
       data-type="equipment"
       data-name="Hydrochloric Acid (99%)"
       data-stock="36 ml"
       data-image="./resource/img/formaldehyde.jpg"
-      >View Product</button>
+      >Edit Product
+      <i class="fa-solid fa-pencil"></i></button>
     </div>
-    </div>
-  </div>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -345,8 +355,8 @@
         August 31, 2025 - PHL 301 - Biology 101
       </div>
     </div>
-    <div class="request-button-container">
-      <button class="request-button">Request</button>
+    <div class="edit-button-container">
+      <button class="request-button edit-button">Edit</button>
     </div>
   </div>
 </div>
@@ -366,8 +376,8 @@
                 <span class="stock-info">Stock: 5 ml</span>
             </div>
         </div>
-        <div class="request-button-container">
-          <button class="request-button">Request</button>
+        <div class="edit-button-container">
+          <button class="request-buttonedit-button">Edit</button>
         </div>
     </div>
 </div>
